<resources>
    <string name="app_name">TurismoMX</string>

    <!--    AUTH    -->
    <string name="logo">Logo</string>
    <!--    Login    -->
    <string name="iniciarSesion">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="recuperarClave">Recuperar contraseña</string>
    <string name="reestablecerClave">Reestablecer</string>
    <string name="recordarCorreo">¿Recordar correo?</string>
    <!--    Regsitro    -->
    <string name="registro">Registro</string>
    <string name="tienesCuenta">¿Ya tienes una cuenta?</string>
    <string name="usuario">Usuario</string>
    <string name="clave">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo electrónico</string>
    <!--    Forgot    -->
    <string name="reestablecer">Reestableceer</string>

    <!--    Usuario -->

    <!--    MenuInicio-->
    <string name="menu_mapa">Mapa</string>
    <string name="menu_misPosts">Mis posts</string>
    <string name="menu_subirPost">Subir post</string>
    <string name="menu_posts">Publicaciónes</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_buscar">Buscar</string>
    <string name="menu_favoritos">Favoritos</string>

    <!--  Perfil fragment  -->
    <string name="infoUsuario">Información del usuario</string>
    <string name="actualizar">Actualizar información</string>
    <string name="actualizarContraseña">Actualizar contraseña</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="imgPerfil">Imágen de perfil</string>
    <string name="claveActual">Contraseña actual</string>
    <string name="claveNueva">Contraseña nueva</string>

    <!--   itemPublicación   -->
    <string name="imagenSave">Imagen guardada en galería</string>
    <string name="imagenDontSave">No se pudo dscargar la imagen</string>
    <string name="actualizarPublicacion">Actualizar publicación</string>
    <string name="msgDescripcionActualizarPost">Solamente podemos actualizar la descripción de tu publicación</string>

    <!--  Datos post activity  -->
    <string name="titulo">Titulo</string>
    <string name="descripcion">Descripción</string>
    <string name="ubicacion">Ubicación</string>
    <string name="etiquetas">Etiquetas</string>
    <string name="subirPost">Subir publicación</string>
    <string name="cancelar">Cancelar</string>
    <string name="postEnviado">Post enviado</string>

    <!--  Post Item  -->
    <string name="editarPost">Editar</string>
    <string name="eliminarPost">Eliminar</string>
    <string name="agergarFavoritoPost">Marcar cómo favorito</string>
    <string name="eliminarFavoritoPost">Desmarcar cómo favorito</string>

    <!--  BottomSheetsImagen  -->
    <string name="compartir">Compartir</string>
    <string name="descargarImagen">Descargar imagen</string>

    <!--  Mensajes de error validaciones  -->
    <string name="mgsErrorCorreo">Es necesario el correo</string>
    <string name="mgsErrorClave">Es necesaria la contraseña</string>
    <string name="mgsErrorClaveActual">Es necesaria la contraseña actual</string>
    <string name="mgsErrorClaveNueva">Es necesaria la nueva contraseña</string>
    <string name="mgsErrorNombre">Es necesario el nombre</string>
    <string name="mgsErrorGeneral">Llena todos los datos correspondientes</string>

    <string name="mgsErrorTitulo">Es necesario el título</string>
    <string name="mgsErrorDescripcion">Es necesaria la descripción</string>
    <string name="mgsErrorEtiqueta">Es necesaria la etiqueta</string>

    <string name="mgsErrorComentario">Es necesaria el comentario</string>

    <!--  Search  -->
    <string name="search_hint">Buscar...</string>
    <!--  API  -->
    <string name="URL_API" translatable="false">https://turismomx-api.herokuapp.com/api/v1</string>
    <!--    <string name="URL_API">http://192.168.1.71:3000/api/v1</string>-->

<!--  IDIOMA  -->
    <string name="espanol">Español</string>
    <string name="ingles">Ingles</string>
    <string name="frances">Frances</string>

    <!--  DataBase  -->
    <string name="DB_NAME" translatable="false">turismoMX</string>
    <string name="subidoPor">"Subido por "</string>
    <string name="fecha">"Fecha: "</string>
    <string name="lugar">"Lugar: "</string>
    <string name="comentarios">Comentarios</string>
    <string name="escribeComntario">Escribe tu comentario</string>
    <string name="cambiarIdioma">Cambiar de idioma</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>
