<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".DatosPostActivity">

    <!--  Imagen a guardar  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/imgDatosPosts"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="Descripcion"
            android:src="@drawable/media" />
    </LinearLayout>

    <!--  Datos del post  -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="start"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfTituloDatosPost"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/titulo"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_baseline_title_24">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfDescripcionDatosPost"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/descripcion"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_baseline_description_24">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text|textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfEtiquetaDatosPost"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="-2dp"
                android:layout_toStartOf="@+id/imgbAgregarTag"
                android:hint="@string/etiquetas"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_baseline_bookmark_24">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/imgbAgregarTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:contentDescription="Descripcion"
                android:src="@drawable/ic_baseline_add_24" />
        </RelativeLayout>


        <com.google.android.material.chip.ChipGroup
            android:id="@+id/tagsDatosPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />


    </LinearLayout>
    <!--  Acciónes  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSubirPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subirPost"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnCancelarPost"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="regresar"
            android:text="@string/cancelar" />
    </LinearLayout>
</LinearLayout>